changed sort order text to inline-block to prevent wrap overlapping with the tabs when resizing browser

--- a/v5/cdebrowser/client/src/main/webapp/css/basicSearchResults.css
+++ b/v5/cdebrowser/client/src/main/webapp/css/basicSearchResults.css
@@ -166,6 +166,7 @@
     font-size:13.33px;
     font-weight:bold;
     padding:10px 0px 5px 10px;
+    display:inline-block;
 }
 
 .sortOrder.left {
